--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,19 +1,119 @@
 {{!-- This is the base layout for your project, and will be used on every page unless specified. --}}
-
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Generál-F | Társasházak közös képviselete, társasházkezelés</title>
+    <link rel="shortcut icon" type="image/x-icon" href="{{root}}assets/img/favicon.ico" />
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
-  </head>
+    <link rel="stylesheet" href="{{root}}assets/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin="">
+    </script>
+    <style>
+    .swiper {
+        width: 100%;
+        height: 100%;
+    }
+
+    .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .slide-title {
+        position: absolute;
+        top: calc(0.8rem + 1vw);
+        font-size: calc(0.7rem + 1vw);
+        color: white;
+    </style>
+    <style>
+    #list li::marker {
+        content: '• ';
+        font-size: 1.1em;
+        color: orangered;
+    }
+
+    #list li {
+        margin-left: 15px;
+    }
+
+    #list2 li::marker {
+        content: '• ';
+        font-size: 1.1em;
+        color: orangered;
+    }
+    </style>
+</head>
+
 <body>
-
-{{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
-{{> body}}
-
-<script src="{{root}}assets/js/app.js"></script>
+    {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
+    {{#ifpage 'lapozo'}}
+    <div class="grid-x grid-padding-x">
+        <div class="cell">
+            {{> body}}
+        </div>
+    </div>
+    {{/ifpage}}
+    {{#ifpage 'referenciak'}}
+    {{> header}}
+    <div class="grid-x grid-padding-x">
+        {{>hero}}
+    </div>
+    <div class="grid-x grid-padding-x">
+        <div class="cell medium-8 large-9">
+            {{> body}}
+        </div>
+        <div class="cell medium-4 large-3">
+            {{> right-column-no-images}}
+        </div>
+    </div>
+    {{/ifpage}}
+    {{#ifpage 'index' 'kapcsolatfelvetel'}}
+    {{> header}}
+    <div class="grid-x grid-padding-x">
+        {{>hero}}
+    </div>
+    <div class="grid-x grid-padding-x">
+        <div class="cell medium-8 large-9">
+            {{> body}}
+        </div>
+        <div class="cell medium-4 large-3 hide-for-small-only">
+            {{> right-column-2images}}
+        </div>
+    </div>
+    {{/ifpage}}
+    {{#ifpage 'bemutatkozas' 'szolgaltatasok'}}
+    {{> header}}
+    <div class="grid-x grid-padding-x">
+        {{>hero}}
+    </div>
+    <div class="grid-x grid-padding-x">
+        <div class="cell medium-8 large-9">
+            {{> body}}
+        </div>
+        <div class="cell medium-4 large-3 hide-for-small-only">
+            {{> right-column-allimages}}
+        </div>
+    </div>
+    {{/ifpage}}
+    <script src="{{root}}assets/js/app.js"></script>
 </body>
+
 </html>
